multiple user support almots done

--- a/firebase.json
+++ b/firebase.json
@@ -11,12 +11,16 @@
     ],
     "rewrites": [
       {
+        "source": "/api",
+        "function": "api"
+      },
+      {
         "source": "/get",
-        "function": "get_latest"
+        "function": "api"
       },
       {
         "source": "/push",
-        "function": "push_data"
+        "function": "api"
       }
     ]
   }
