--- a/functions/package.json
+++ b/functions/package.json
@@ -9,16 +9,17 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
-    "node-fetch": "^2.6.7"
+    "@google-cloud/storage": "^6.11.0",
+    "firebase-admin": "^11.9.0",
+    "firebase-functions": "^4.4.1",
+    "node-fetch": "^2.6.11"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
