--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,11 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
+    "busboy": "^1.6.0",
+    "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.4.1",
+    "mime": "^3.0.0",
     "node-fetch": "^2.6.11"
   },
   "devDependencies": {
