Update API documentation

--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
     ],
     "rewrites": [
       {
-        "source": "/api",
+        "source": "/",
         "function": "api"
       },
       {
