Update desktop script to work with file copying/pasting

--- a/firebase.json
+++ b/firebase.json
@@ -11,15 +11,15 @@
     ],
     "rewrites": [
       {
-        "source": "/",
+        "source": "/api",
         "function": "api"
       },
       {
-        "source": "/get",
+        "source": "/paste",
         "function": "api"
       },
       {
-        "source": "/push",
+        "source": "/copy",
         "function": "api"
       }
     ]
