--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,13 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
+    "bcrypt": "^5.1.0",
     "busboy": "^1.6.0",
     "express": "^4.18.2",
     "file-type": "^16.5.4",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.4.1",
-    "node-fetch": "^2.6.11"
+    "uuid-by-string": "^4.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
